tests/NormalTests/paczka1/fuzzy1/20485415.err
Error in line 12: n47e A998 2,6
Error in line 5: yk7Vo6 S937 54,4
Error in line 13: n47e A592 6,3
Error in line 27: yk7Vo6 A104 18,4
Error in line 22: ise6hO A592 70,0
Error in line 30: ise6hO A104 83,7
